--- a/_teaching/gap2019.md
+++ b/_teaching/gap2019.md
@@ -2,7 +2,7 @@
 title: "Student Assistant for programming in GAP"
 collection: programming
 type: "Programming"
-permalink: /teaching/gap
+permalink: /teaching/gap2019
 venue: "RWTH Aachen University"
 date: 2019-09-01
 location: "Aachen, Germany"
